--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -7,6 +7,10 @@
     width: 100%;
 }
 
+.article-create-date {
+    font-size: 13px;
+}
+
 .article-list img {
     border-radius: 10px;
     width: 100%;
